--- a/src/utils/CSS/Footer.estilos.css
+++ b/src/utils/CSS/Footer.estilos.css
@@ -2,8 +2,8 @@
  display: flex;
  width: 100%;
  height: 33.4vh;
- border: 2px solid red;
  justify-content: space-between;
+  margin: 20px 5px;
 }
 .ContainerText2{
  display: flex;
