--- a/src/utils/CSS/Cuerpo.estilos.css
+++ b/src/utils/CSS/Cuerpo.estilos.css
@@ -20,4 +20,24 @@
  margin-right: 10px;
  height: 100%;
  justify-content: center; 
-} 
+}
+
+.ContainerImg1 img{
+  display: flex;
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+/* responsive */
+
+/* de 768  a 900 */
+
+@media only screen and (min-width:768px) and (max-width:900px) {
+    .Container_Cuerpo{
+      height: auto;
+      flex-direction: column;
+      align-items: center;
+
+    }
+}
