--- a/src/utils/CSS/Footer.estilos.css
+++ b/src/utils/CSS/Footer.estilos.css
@@ -21,3 +21,10 @@
  height: 100%;
  justify-content: center; 
 } 
+
+.ContainerImg2 img{
+  display: flex;
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
