Yo cambie la fuente del footer y le dí un id

--- a/src/utils/CSS/Footer.estilos.css
+++ b/src/utils/CSS/Footer.estilos.css
@@ -29,5 +29,9 @@
   object-fit: contain;
 }
 .Container_footer h1{
-  color: red;
+  color: green;
+  font-size: 52px;
+}
+#p-footer{
+  font-size: 18px;
 }
