--- a/src/utils/CSS/Cuerpo.estilos.css
+++ b/src/utils/CSS/Cuerpo.estilos.css
@@ -4,6 +4,7 @@
  height: 33.4vh;
  justify-content: space-between;
   margin: 20px 5px;
+  background: blue;
 
 }
 .ContainerText{
@@ -14,6 +15,11 @@
  font-family: Impact;
  font-size: 20px;
  color: red;
+
+}
+
+.ContainerText p{
+  font-size: 60px;
 }
 
 .ContainerImg1{
